# drigod_bundle_search

./: AGENTS.md  README.md  TODO.md  pyproject.toml  pytest.ini  run.py
src/outfit_engine/: __init__.py
src/outfit_engine/api/: __init__.py  app.py  router.py
src/outfit_engine/config/: bootstrap.py
src/outfit_engine/domain/: __init__.py  commands.py  events.py  models.py  value_objects.py
src/outfit_engine/infrastructure/: repositories.py
src/outfit_engine/services/: beam_search.py  command_handlers.py  recommendation_service.py  scoring.py  templates.py
src/outfit_engine/tests/: test_recommendation.py
